--- a/src/components/Lanyard/Lanyard.css
+++ b/src/components/Lanyard/Lanyard.css
@@ -1,11 +1,17 @@
 .lanyard-wrapper {
   position: relative;
   z-index: 0;
-  width: 200vh;
-  height: 70vh;
+  width: 100%; 
+  height: 50vh; /* Tinggi untuk mobile */
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: scale(1);
-  transform-origin: center;
+}
+
+/* Responsif untuk Desktop */
+@media (min-width: 1024px) {
+  .lanyard-wrapper {
+    width: 100%;
+    height: 80vh; /* Lebih tinggi di desktop */
+  }
 }
